--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/fontawesome-free": "^5.6.3",
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.2.1",
+    "bootstrap": ">=4.3.1",
     "ejs": "^2.6.1",
     "expose-loader": "^0.7.5",
     "express": "^4.16.4",
